<resources>
    <string name="app_name">Yours Todos</string>
    <string name="update">Update todo</string>
    <string name="title">Title</string>
    <string name="description">Description (optional)</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="addTodo">Add Todo</string>
    <string name="quick_add">Quick Add</string>
    <string name="new_task">New Task</string>
    <string name="todo_image">Todo Image</string>
    <string name="time">Time (optional)</string>
    <string name="date">Date (optional, ex: 31.12)</string>
    <string name="sort">Sort</string>
    <string name="clear">Clear</string>
    <string name="menu">Menu</string>
    <string name="sort_id">Date Added</string>
    <string name="sort_priority">Priority</string>
    <string name="sort_date">Date to be done</string>
    <string name="sort_title">Title</string>
    <string name="channel_name">test</string>
    <string name="channel_description">anothertest</string>
    <string-array name="dialog_list">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
